fix orange color working only with tailwind bg opacity change menu on mobile to black color with less opacity so it's clearly visible and not obstructed by background elements

--- a/components/Menu/Menu.module.css
+++ b/components/Menu/Menu.module.css
@@ -1,5 +1,5 @@
 .menu {
-    @apply fixed top-0 right-0 py-14 px-3 w-56 bg-white bg-opacity-10 rounded-l-2xl z-20 flex justify-end transition-transform duration-500;
+    @apply fixed top-0 right-0 py-14 px-3 w-56 bg-black bg-opacity-80 rounded-l-2xl z-20 flex justify-end transition-transform duration-500;
 }
 
 #menuLinkList {
